# Hatch

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-02-hatch.md
docs/superpowers/specs/: 2026-04-02-hatch-design.md
npm/hatch/: install.js  package.json
src/: checksum.rs  cli.rs  credentials.rs  main.rs  path_utils.rs  rate_limiter.rs
src/commands/: drop.rs  info.rs  list.rs  mod.rs  push.rs
src/storage/: mod.rs  s3.rs
